--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:wght@100&display=swap");
-
 * {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
@@ -11,7 +9,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 500px;
+  height: 550px;
   margin: 0 auto;
   background: #222;
   background-image: url("https://source.unsplash.com/1600x900/?landscape");
@@ -19,59 +17,38 @@ body {
 }
 
 .app {
-  background-color: #000000d0;
+  background-color: #00005cd0;
   color: #fff;
-  width: 300px;
+  width: 350px;
   margin: 0 auto;
   border-radius: 15px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
-  padding: 50px;
+  padding: 20px;
 }
 
 .search {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
 }
 
 button {
-  margin: 0.5em;
-  border-radius: 50%;
-  border: none;
-  height: 46px;
-  width: 46px;
-  background: #7c7c7c2b;
-  color: white;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
+  margin: 10px;
 }
 
-button:hover {
-  margin: 0.5em;
-  border-radius: 50%;
-  border: none;
-  height: 44px;
-  width: 44px;
-  background: #7c7c7c6b;
-  color: white;
-}
-
-.searchbar {
+#city_name {
   border: none;
   outline: none;
   padding: 0.4em 1em;
-  border-radius: 24px;
+  border-radius: 12px;
   background-color: #7c7c7c2b;
-  color: white;
   font-family: inherit;
   font-size: 105%;
-  width: 130px;
+  width: 230px;
 }
 
 .app h1 {
-  font-size: 60px;
-  margin-left: -15px;
+  font-size: 36px;
 }
 
 .app h2 {
@@ -86,13 +63,12 @@ button:hover {
 
 .weather-description {
   text-transform: capitalize;
+  width: 150px;
 }
 
 .flex {
   display: flex;
   align-items: center;
-}
-
-#icon {
-  margin-left: -10px;
+  margin-bottom: 15px;
+  margin-left: 60px;
 }
