--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   margin: 0 auto;
   background: #222;
   background-image: url("https://source.unsplash.com/1600x900/?landscape");
+  background-size: cover;
   font-size: 120%;
 }
 
