--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   background: #222;
   background-image: url("https://source.unsplash.com/1600x900/?landscape");
   background-size: cover;
+  background-repeat: no-repeat;
   font-size: 120%;
 }
 
