--- a/style.css
+++ b/style.css
@@ -74,3 +74,14 @@ button {
   margin-bottom: 15px;
   margin-left: 60px;
 }
+
+@media screen and (max-width: 1200px) {
+  body {
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .app {
+    margin-bottom: 100%;
+  }
+}
